clusters/home-lab/cdk8s_definitions/dist/prod-media/radarr/radarr.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr-19.1.6
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.2.6.8376
    helm-revision: "1"
    helm.sh/chart: radarr-19.1.6
    release: radarr
    service.name: main
  name: radarr
  namespace: prod-media
spec:
  ports:
    - name: main
      port: 7878
      protocol: TCP
      targetPort: 7878
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    pod.name: main
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr-19.1.6
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.2.6.8376
    helm-revision: "1"
    helm.sh/chart: radarr-19.1.6
    release: radarr
    service.name: metrics
  name: radarr-metrics
  namespace: prod-media
spec:
  ports:
    - name: metrics
      port: 7879
      protocol: TCP
      targetPort: 7879
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    pod.name: exportarr
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr-19.1.6
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.2.6.8376
    helm-revision: "1"
    helm.sh/chart: radarr-19.1.6
    release: radarr
  name: radarr-exportarr
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
      pod.name: exportarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        app: radarr-19.1.6
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: radarr
        app.kubernetes.io/version: 5.2.6.8376
        helm-revision: "1"
        helm.sh/chart: radarr-19.1.6
        pod.lifecycle: permanent
        pod.name: exportarr
        release: radarr
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - radarr
          image: ghcr.io/onedr0p/exportarr:v2.0.1@sha256:727e7bc8f2f0934a2117978c59f4476b954018b849a010ea6cfb380bd6539644
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 7879
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: radarr
          ports:
            - containerPort: 7879
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 7879
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: 7879
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: true
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
              pod.name: exportarr
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: truecharts.org/rack
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
              pod.name: exportarr
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: varrun
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr-19.1.6
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.2.6.8376
    helm-revision: "1"
    helm.sh/chart: radarr-19.1.6
    release: radarr
  name: radarr
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        app: radarr-19.1.6
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: radarr
        app.kubernetes.io/version: 5.2.6.8376
        helm-revision: "1"
        helm.sh/chart: radarr-19.1.6
        pod.lifecycle: permanent
        pod.name: main
        release: radarr
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: RADARR__PORT
              value: "7878"
          image: ghcr.io/onedr0p/radarr:5.7.0.8882@sha256:67cf7fa3b10fbb9771ef11c62a215d50956a238c1a27b4195f19bdc92b796cc7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: radarr
          ports:
            - containerPort: 7878
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /downloads
              name: downloads
              readOnly: false
            - mountPath: /movies
              name: media
              readOnly: false
              subPath: Movies
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: truecharts.org/rack
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: devshm
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: media
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: radarr-19.1.6
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.2.6.8376
    helm-revision: "1"
    helm.sh/chart: radarr-19.1.6
    release: radarr
  name: radarr
  namespace: prod-media
spec:
  rules:
    - host: radarr.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            path: /
            pathType: Prefix
